--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,274 +1,1 @@
-* {
-    border: none;
-    border-radius: 0;
-    /* `otf-font-awesome` is required to be installed for icons */
-    font-family: Roboto, Helvetica, Arial, sans-serif;
-    font-size: 13px;
-    min-height: 0;
-}
-
-window#waybar {
-    background-color: rgba(0,0,0,0.5);
-    color: #7121c2;
-    border-bottom: 3px solid rgba(100, 114, 125, 0.3);
-    transition-property: background-color;
-    transition-duration: .5s;
-}
-
-window#waybar.hidden {
-    opacity: 0.2;
-}
-
-/*
-window#waybar.empty {
-    background-color: transparent;
-    color: #7121c2;
-}
-window#waybar.solo {
-    background-color: #FFFFFF;
-    color: #7121c2;
-}
-*/
-
-window#waybar.termite {
-    background-color: #3F3F3F;
-}
-
-window#waybar.chromium {
-    background-color: #000000;
-    border: none;
-}
-
-#workspaces button {
-    padding: 0 5px;
-    background-color: transparent;
-    color: #7121c2;
-    /* Use box-shadow instead of border so the text isn't offset */
-    box-shadow: inset 0 -3px transparent;
-}
-
-/* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
-#workspaces button:hover {
-    background: rgba(0, 0, 0, 0.2);
-    box-shadow: inset 0 -3px #ffffff;
-}
-
-#workspaces button.focused {
-    background-color: #64727D;
-    box-shadow: inset 0 -3px #ffffff;
-}
-
-#workspaces button.urgent {
-    background-color: #eb4d4b;
-}
-
-#mode {
-    background-color: #64727D;
-    border-bottom: 3px solid #ffffff;
-}
-
-#clock,
-#battery,
-#cpu,
-#memory,
-#disk,
-#temperature,
-#backlight,
-#network,
-#pulseaudio,
-#custom-media,
-#tray,
-#mode,
-#idle_inhibitor,
-#mpd {
-    padding: 0 10px;
-    margin: 0 4px;
-}
-
-#window,
-#workspaces {
-    margin: 0 4px;
-}
-
-/* If workspaces is the leftmost module, omit left margin */
-.modules-left > widget:first-child > #workspaces {
-    margin-left: 0;
-}
-
-/* If workspaces is the rightmost module, omit right margin */
-.modules-right > widget:last-child > #workspaces {
-    margin-right: 0;
-}
-
-#clock {
-    background-color: transparent;
-    color: #7121c2;
-}
-
-#battery {
-    background-color: transparent;
-    color: #7121c2;
-}
-
-#battery.charging, #battery.plugged {
-    background-color: transparent;
-    color: #7121c2;
-}
-
-@keyframes blink {
-    to {
-        background-color: transparent;
-	color: #7121c2;
-    }
-}
-
-#battery.critical:not(.charging) {
-    background-color: transparent;
-    color: #7121c2;
-    animation-name: blink;
-    animation-duration: 0.5s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-}
-
-label:focus {
-    background-color: transparent;
-    color: #7121c2;
-}
-
-#cpu {
-    background-color: transparent;
-    color: #7121c2;
-}
-
-#memory {
-    background-color: transparent;
-    color: #7121c2;
-}
-
-#disk {
-    background-color: transparent;
-    color: #7121c2;
-}
-
-#backlight {
-    background-color: transparent;
-    color: #7121c2;
-}
-
-#network {
-    background-color: transparent;
-    color: #7121c2;
-}
-
-#network.disconnected {
-    background-color: transparent;
-    color: #7121c2;
-}
-
-#pulseaudio {
-    background-color: transparent;
-    color: #7121c2;
-}
-
-#pulseaudio.muted {
-    background-color: transparent;
-    color: #7121c2;
-}
-
-#custom-media {
-    background-color: transparent;
-    color: #7121c2;
-    min-width: 100px;
-}
-
-#custom-media.custom-spotify {
-    background-color: transparent;
-    color: #7121c2;
-}
-
-#custom-media.custom-vlc {
-    background-color: transparent;
-    color: #7121c2;
-}
-
-#temperature {
-    background-color: transparent;
-    color: #7121c2;
-}
-
-#temperature.critical {
-    background-color: transparent;
-    color: #7121c2;
-}
-
-#tray {
-    background-color: transparent;
-    color: #7121c2;
-}
-
-#tray > .passive {
-    -gtk-icon-effect: dim;
-}
-
-#tray > .needs-attention {
-    -gtk-icon-effect: highlight;
-    background-color: transparent;
-    color:  #7121c2;
-}
-
-#idle_inhibitor {
-    background-color: transparent;
-    color: #7121c2;
-}
-
-#idle_inhibitor.activated {
-    background-color: transparent;
-    color: #7121c2;
-}
-
-#mpd {
-    background-color: transparent;
-    color: #7121c2;
-}
-
-#mpd.disconnected {
-    background-color: transparent;
-    color: #7121c2;
-}
-
-#mpd.stopped {
-    background-color: transparent;
-    color: #7121c2;
-}
-
-#mpd.paused {
-    background-color: transparent;
-    color: #7121c2;
-}
-
-#language {
-    background: transparent;
-    color: #7121c2;
-    padding: 0 5px;
-    margin: 0 5px;
-    min-width: 16px;
-}
-
-#keyboard-state {
-    background: transparent;
-    color: #7121c2;
-    padding: 0 0px;
-    margin: 0 5px;
-    min-width: 16px;
-}
-
-#keyboard-state > label {
-    padding: 0 5px;
-}
-
-#keyboard-state > label.locked {
-    background: rgba(0, 0, 0, 0.2);
-    color: #7121c2;
-}
+/home/waltz/.config/waybar/style.css
