--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,8 +1,8 @@
 * 
 {
     /* Fonts */
-    font-family: FontAwesome, Roboto, Helvetica, Arial, sans-serif;
-    font-size: 15px;
+    font-family: FontAwesome, Noto;
+    font-size: 15;
 }
 
 window#waybar {
@@ -24,6 +24,8 @@ button {
     /* Avoid rounded borders under each button name */
     border: none;
     border-radius: 0;
+
+    box-shadow: inset 0 -2px #372f8a;
 }
 
 /* Workspaces hover effect | below the workspace */
@@ -31,7 +33,6 @@ button:hover {
     color: inherit;
     /*box-shadow: inset 0 -3px #ffffff;*/
 }
-
 
 #workspaces button {
     padding: 0 5px;
@@ -44,13 +45,11 @@ button:hover {
     background: #828282;
 }
 
-
 /* That bar bottom on workspace */
 #workspaces button.active {
     background-color: #5a0fa6;
     /*box-shadow: inset 0 -3px #ffffff;*/
 }
-
 
 /* Color when a workspace need focus */
 #workspaces button.urgent {
@@ -68,9 +67,34 @@ button:hover {
     margin: 0 4px;
 }
 
-/* Custom/bar */
-#custom-bar {
-   background-color: #5a0fa6;
+/* Custom/bar: Clock  */
+#custom-clock {
+   background-color: transparent;
+   box-shadow: inset 0 -2px #deb031;
+}
+
+/* Custom/bar: Calendar */
+#custom-calendar {
+   background-color: transparent;
+   box-shadow: inset 0 -2px #d8eb2d;
+}
+
+/* Custom/bar: Battery */
+#custom-battery {
+   background-color: transparent;
+   box-shadow: inset 0 -2px #6328e0;
+}
+
+/* Custom/bar: Temperature */
+#custom-temperature {
+   background-color: transparent;
+   box-shadow: inset 0 -2px #eb4034;
+}
+
+/* Custom/bar: Music */
+#custom-music {
+   background-color: transparent;
+   box-shadow: inset 0 -2px #6d24c7;
 }
 
 /* If workspaces is the leftmost module, omit left margin */
